# serializer version: 1
# name: test_sensor_entities[sensor.fanlinc_lamp_responding-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.fanlinc_lamp_responding',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Responding',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Responding',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_EE EE EE 1_ERR',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.fanlinc_lamp_responding-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'FanLinc Lamp Responding',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.fanlinc_lamp_responding',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_entities[sensor.garage_outlet_responding-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.garage_outlet_responding',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Responding',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Responding',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_BB BB BB 1_ERR',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.garage_outlet_responding-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Garage Outlet Responding',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.garage_outlet_responding',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_entities[sensor.hallway_light_responding-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hallway_light_responding',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Responding',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Responding',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_AA AA AA 1_ERR',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.hallway_light_responding-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hallway Light Responding',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hallway_light_responding',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_entities[sensor.living_thermostat_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.living_thermostat_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Humidity',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'Humidity',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_DD DD DD 1_CLIHUM',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.living_thermostat_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'Living Thermostat Humidity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.living_thermostat_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_entities[sensor.living_thermostat_responding-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.living_thermostat_responding',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Responding',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Responding',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_DD DD DD 1_ERR',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.living_thermostat_responding-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living Thermostat Responding',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.living_thermostat_responding',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_entities[sensor.sunset_lights_last_finish-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.sunset_lights_last_finish',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last finish',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last finish',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'program_last_finish',
    'unique_id': 'aa:bb:cc:dd:ee:ff_0010_last_finish',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.sunset_lights_last_finish-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Sunset Lights Last finish',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.sunset_lights_last_finish',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-05-13T18:42:13+00:00',
  })
# ---
# name: test_sensor_entities[sensor.sunset_lights_last_run-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.sunset_lights_last_run',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last run',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last run',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'program_last_run',
    'unique_id': 'aa:bb:cc:dd:ee:ff_0010_last_run',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.sunset_lights_last_run-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Sunset Lights Last run',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.sunset_lights_last_run',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-05-13T18:42:11+00:00',
  })
# ---
# name: test_sensor_entities[sensor.sunset_lights_next_scheduled_run-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.sunset_lights_next_scheduled_run',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Next scheduled run',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Next scheduled run',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'program_next_scheduled',
    'unique_id': 'aa:bb:cc:dd:ee:ff_0010_next_scheduled',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.sunset_lights_next_scheduled_run-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Sunset Lights Next scheduled run',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.sunset_lights_next_scheduled_run',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-05-14T18:42:00+00:00',
  })
# ---
# name: test_sensor_entities[sensor.sunset_lights_running-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'idle',
        'running_else',
        'running_then',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.sunset_lights_running',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Running',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': 'mdi:run',
    'original_name': 'Running',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'program_running',
    'unique_id': 'aa:bb:cc:dd:ee:ff_0010_running',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entities[sensor.sunset_lights_running-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Sunset Lights Running',
      'icon': 'mdi:run',
      'options': list([
        'idle',
        'running_else',
        'running_then',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.sunset_lights_running',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
